Adding classes for page header styling

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1800,3 +1800,13 @@ a.booking_url {
 .module:hover .booking_url {
   background-color: $odiGrey;
 }
+
+.header-wrap {
+    position: relative;
+}
+
+.header-right {
+    position: absolute;
+    top: 12px;
+    right: 15px;
+}
