--- a/app/views/root/_navbar.html.erb
+++ b/app/views/root/_navbar.html.erb
@@ -47,7 +47,7 @@
     </ul>
 
     <!-- Patched to remove search bar. To reenable, just remove `or true` -->
-    <% unless mobile or true %>
+    <% unless mobile %>
       <form class="navbar-form navbar-right" action="/search" method="get">
         <div class="form-group">
           <div class="input-group">
