--- a/app/views/root/_navbar.html.erb
+++ b/app/views/root/_navbar.html.erb
@@ -39,23 +39,25 @@
       </div>
     <% end %>
 
-    <ul class="nav navbar-nav navbar-right">
+<!-- 	Added to main menu -->
+<!--    <ul class="nav navbar-nav navbar-right"
       <li><a href="/contact">Contact us</a></li>
-      <li><a href="/newsletters">Newsletters</a></li>
+      <li><a href="/newsletters">Newsletters</a></li>-->
 
       <!-- <li><a href="#about">Sign in</a></li> -->
     </ul>
 
     <!-- Patched to remove search bar. To reenable, just remove `or true` -->
+    <!-- Added to main menu-->
     <% unless mobile %>
-      <form class="navbar-form navbar-right" action="/search" method="get">
+<!--      <form class="navbar-form navbar-right" action="/search" method="get">
         <div class="form-group">
           <div class="input-group">
             <input type="text" class="form-control" placeholder="Search ODI" name="q"/>
             <input type="submit" value="Go" class="btn"/>
           </div>
         </div>
-      </form>
+      </form>-->
     <% end %>
   </div>
 </div>
