--- a/app/views/root/_www_main.erb
+++ b/app/views/root/_www_main.erb
@@ -34,7 +34,14 @@
       <div class="collapse navbar-collapse">
         <div class="navbar navbar-static-top">
           <div class="container">
-
+          <form class="navbar-form navbar-right mobile-only" action="/search" method="get">
+           <div class="form-group">
+             <div class="input-group">
+              <input type="text" class="form-control" placeholder="Search ODI" name="q"/>
+              <input type="submit" value="Go" class="btn"/>
+             </div>
+           </div>
+          </form>
               <ul class="nav navbar-nav main-nav">
                 <% menus = get_menu("www")%>
                 <% menus.each_index do |i| %>
@@ -55,6 +62,8 @@
                         <% end %>
                     </li>
                 <% end %>
+      		<li class="mobile-only"><a href="/contact">Contact us</a></li>
+	        <li class="mobile-only"><a href="/newsletters">Newsletters</a></li>
               </ul>
             </div>
           </div>
