Add instant articles meta tag

--- a/app/views/root/_www_main.erb
+++ b/app/views/root/_www_main.erb
@@ -25,6 +25,10 @@
     <!--[if lte IE 8]><%= stylesheet_link_tag "ie8.css" %><![endif]-->
     <!--[if lte IE 7]><%= stylesheet_link_tag "ie7.css" %><![endif]-->
     <!--[if lt IE 7]><%= stylesheet_link_tag "ie6.css" %><![endif]-->
+
+    <!-- Facebook instant articles -->
+    <meta property="fb:pages" content="1755416561338416" />
+
 </head>
 
 <body>
