Hide page furniture

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -189,3 +189,9 @@
     display: none;
   }
 }
+
+// Hide page furniture from printers
+
+.article-sidebar, .site-footer, .navbar-right {
+  @extend .hidden-print;
+}
