--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,7 @@
 @import "main";
 @import "font-awesome";
 @import "ui/tags";
-
+@import "slick";
 
 .course-sidebar {
   @extend .article-sidebar;
