--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1327,6 +1327,14 @@ figure.pull-right {
     color: #8e8c8c;
     font-size: 14px;
     margin-bottom: 30px;
+
+    img {
+      margin-left: 8px;
+      -webkit-clip-path: circle(50% at 50% 50%);
+      clip-path: circle(50% at 50% 50%);
+      border-radius:50%;
+      overflow: hidden;
+    }
 }
 
 table {
